log
Wed 10 May 2023 03:11:16 PM UTC: 
 tests:  0|4
total_score: 0/70
8b3801c
Wed 10 May 2023 03:16:16 PM UTC: 
 heap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
fa50d62
Wed 10 May 2023 03:16:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bed6c8f
Wed 10 May 2023 03:17:57 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ec91d01
Wed 10 May 2023 03:18:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f5293c4
Wed 10 May 2023 03:20:00 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   23 |   if (!h || !h -> heapArray) free(h); return NULL;
      |   ^~
heap.c:23:39: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   23 |   if (!h || !h -> heapArray) free(h); return NULL;
      |                                       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b49554b
Wed 10 May 2023 03:20:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:23:37: error: expected ‘;’ before ‘return’
   23 |   if (!h || !h -> heapArray) free(h) return NULL;
      |                                     ^~~~~~~
      |                                     ;
Compilation failed
dc3af9a
